commit al master del blogpost version mas reciente

--- a/hojadeestilos.css
+++ b/hojadeestilos.css
@@ -2,3 +2,8 @@ body {
   color: deeppink;
   text-align: center;
 }
+#header {
+  background-color: deeppink;
+  border-top: dodgerblue;
+  text-align: center;
+}
