modificaciones para error

--- a/hojadeestilos.css
+++ b/hojadeestilos.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
 }
 #header {
-  background-color: deeppink;
+  background-color: rgb(194, 194, 194);
   border-top: dodgerblue;
   text-align: center;
 }
