agrefe un monton de errores

--- a/hojadeestilos.css
+++ b/hojadeestilos.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
 }
 #header {
-  background-color: deeppink;
+  background-color: blueviolet;
   border-top: dodgerblue;
   text-align: center;
 }
